--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
-    "no-use-before-define": ["error", { "variables": false }],
+    "no-use-before-define": ["error", { "variables": false, "classes": false }],
+    "max-classes-per-file": "off",
     "import/extensions": [
       1,
       {
